--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\yaha\\Anaconda3\\envs\\a2\\python.exe"
+    "python.pythonPath": "C:\\Users\\yaha\\AppData\\Local\\Programs\\Python\\Python35\\python.exe"
 }
